# article-2-linkedin-post

./: .coveragerc  pyproject.toml  pytest.ini  requirements-dev.txt
.github/workflows/: ci-cd.yml
tests/: __init__.py  test_article_fetcher.py  test_post_generator.py  test_prompts.py  test_user_config.py
